# MADYPG

./: .gitignore  .gitmodules  LICENSE.txt  README.md  automatic_compilation.sh  convert_folders.py  exec.py
data/: .gitignore  dummy.fbx
data/binseqs/HYLC_sweaters/: download.txt
data/yarnmodels/: .gitignore  download.txt
data/yarnmodels/model_basket_9/sxsasy/: data.npy
data/yarnmodels/model_honey_9/: pyp
data/yarnmodels/model_honey_9/sxsasy/: data.npy
data/yarnmodels/model_rib_9/sxsasy/: axes.txt  data.npy
data/yarnmodels/model_satin_9/sxsasy/: data.npy
data/yarnmodels/model_stock_15slide/sxsasy/: axes.txt
data/yarnmodels/model_stock_9/sxsasy/: data.npy
data/yarnmodels/model_stocktiniest_9/sxsasy/: data.npy
data/yarnmodels/model_stocktiny/: pyp
data/yarnmodels/model_stocktiny/sxsasy/: axes.txt  data.npy
data/yarnmodels/num_samples/model_rib_5/sxsasy/: axes.txt  data.npy
data/yarnmodels/num_samples/model_stock_5/sxsasy/: data.npy
data/yarnmodels/stretchx_extreme/model_basket_stretchx/: pyp
data/yarnmodels/stretchx_extreme/model_basket_stretchx/sxsasy/: axes.txt  data.npy
data/yarnmodels/stretchx_extreme/model_rib_stretchx/: pyp
data/yarnmodels/stretchx_extreme/model_rib_stretchx/sxsasy/: data.npy
data/yarnmodels/stretchx_extreme/model_stock_stretchx/: pyp
data/yarnmodels/stretchx_extreme/model_stock_stretchx/sxsasy/: data.npy
export/: blender_import_npy.txt
generate_yarnmodels/: .gitignore  generate.py  generate_bending.py  generate_bending4D.py  generate_extreme_stretch.py  generate_inplane.py  generate_nsamples.py  generate_sliding.py  timings_20210114-175021.txt  timings_20210114-175455.txt  timings_20210121-184031.txt  timings_20210122-185400.txt
generate_yarnmodels/pyp/: stocktiniest.pyp
generate_yarnmodels/pyp/hylc2020/: satin.pyp  satin_small.pyp  stockinette_small.pyp
launch_scripts/: run_cylinder_basket.sh  run_cylinder_honeycomb.sh  run_cylinder_rib.sh  run_cylinder_satin.sh  run_cylinder_stockinette.sh  run_rib_stretch.sh  run_shearing.sh  run_sleeve.sh  run_sock.sh  run_stockinette_stretch.sh  run_sweater_rib.sh  run_sweater_stockinette.sh  run_sweater_tiny_stockinette.sh
matcaps/: .gitignore
src/: CMakeLists.txt  EigenDefinitions.h  MainApplication.cpp  MainApplication.h  SsaoExample.cpp  VectorBuffer.h  magnum-master-changes.h  obj2bin.cpp
src/Shaders/: Ssao.frag  SsaoApply.frag  SsaoApplyShader.cpp  SsaoApplyShader.h  SsaoShader.cpp  SsaoShader.h  YarnShader.cpp  YarnShader.frag  YarnShader.geom  YarnShader.h  YarnShader.vert  resources.conf
src/arcball/: ArcBall.cpp  ArcBall.h  ArcBallCamera.h
src/dependencies/: .gitignore
src/dependencies/cnpy/: cnpy.cpp  cnpy.h
src/dependencies/fbx/: fbxdocument.h  fbxnode.h  fbxproperty.cpp  github.txt
src/imfilebrowser/: imfilebrowser.h
src/io/: bitsery_eigen.h  export_fbx.cpp  export_fbx.h  framesio.cpp  framesio.h  load_scene.cpp  load_scene.h  objio.cpp  objio.h  trafoio.cpp  trafoio.h
src/mesh/: AbstractMeshProvider.h  AbstractMeshSimulation.h  BinSeqAnimation.h  Frame.h  Mesh.cpp  Mesh.h  ObjSeqAnimation.h  PBDConstraints.cpp  PBDConstraints.h  PBDSimulation.cpp  PBDSimulation.h  TestMeshSimulation.h  Trafo.h  meshio.cpp  meshio.h
src/render/: EigenDefinitions.h  Lines.h  MeshDrawable.h  ObsMeshDrawable.h  TestYarns.h  ThreadUtils.h  YarnDrawable.h  YarnInterface.h  enableMSAA.h  render_definitions.h
src/render/shaders/: GroundShader.cpp  GroundShader.frag  GroundShader.geom  GroundShader.h  GroundShader.vert  MeshShader.cpp  MeshShader.frag  MeshShader.geom  MeshShader.h  MeshShader.vert  ObsMeshShader.cpp  ObsMeshShader.frag  ObsMeshShader.geom  ObsMeshShader.h  Ssao.frag  SsaoApply.frag  SsaoApplyShader.cpp  SsaoApplyShader.h  SsaoShader.cpp  SsaoShader.h  YarnShader.cpp  YarnShader.frag  YarnShader.geom  YarnShader.h  YarnShader.vert  resources.conf
src/tinyxml2/: tinyxml2.h
src/utils/: debug_includes.h  debug_logging.cpp  debug_logging.h  debug_macros.h  debug_singleton.h  debug_timer.h  threadutils.h
src/yarns/: Grid.cpp  Grid.h  Model.cpp  Model.h  Model4D.h  ModelV0.cpp  ModelV0.h  ModelV1.cpp  ModelV1.h  PeriodicYarnPattern.cpp  PeriodicYarnPattern.h  TestYarns.h  YarnMapper.cpp  YarnMapper.h  YarnSoup.cpp  YarnSoup.h
src/yarns/shaders/: DeformShader.comp  DeformShader.cpp  DeformShader.h  ShaderSettings.h  ShellMapShader.comp  ShellMapShader.cpp  ShellMapShader.h  resources.conf
